@@ -39,7 +39,7 @@ This release includes the following bugfixes:
  o TFTP problems after a failed transfer to the same host
  o improved out of the box TPF compatibility
  o HTTP PUT protocol line endings portions mangled from CRLF to CRCRLF
- o Rejected SSL session ids are killed properly (for OpenSSL builds)
+ o Rejected SSL session ids are killed properly (for OpenSSL and GnuTLS builds)
 
 This release includes the following known bugs:
 
